- Implemented displaying Move Description Toggling to the Chat Messages generated when rolling a move from the character sheet. Not perfect, but currently works. - Bug: currently the Sheet desc. and the Chat desc. format slightly different. (list styling, spacing)

--- a/styles/simple.less
+++ b/styles/simple.less
@@ -29,6 +29,18 @@
       font-family: MomsTypewriter, serif;
       font-weight: bold;
       font-size: medium;
+
+      .item-summary {
+        list-style: none;
+        flex: 0 0 100%;
+        font-size: medium;
+        font-weight: normal;
+        line-height: 16px;
+        padding: 0.25em 0.5em;
+        color: #191813;
+        font-family: Sling, sans-serif;
+      }
+
     }
 
     h3 {
